K8s/grpcServerDeploy.yaml
---
#Pod Deployment file
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: nginx
        image: tamilhce/grpctest
---
# Service Type : Cluster
apiVersion: v1
kind: Service
metadata:
  name: grpcservice
  labels:
    svc: grpc
spec:
  ports:
  - port: 5051
    protocol: TCP
    targetPort: 6000
  selector:
    app: server
